sample/Kubernetes/TheIdServer-private-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: FreeTheIdServer-private
  namespace: FreeTheIdServer
spec:
  selector:
    matchLabels:
      app: FreeTheIdServer-private
  replicas: 2
  template:
    metadata:
      labels:
        app: FreeTheIdServer-private
        role: backend
    spec:
      containers:
      - image: aguacongas/FreeTheIdServer:next # update with the version you want to use
        name: FreeTheIdServer-private
        ports:
        - containerPort: 5443
        volumeMounts:
        - name: certificates-volume
          mountPath: /usr/local/share/ca-certificates
        - name: config
          mountPath: /usr/local/share/config
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /usr/local/share/config/admin-appsettings.Private.json /app/wwwroot/appsettings.json"]
      volumes:
      - name: certificates-volume
        persistentVolumeClaim:
          claimName: certificates
      - name: config
        persistentVolumeClaim:
          claimName: config
