sample/Kubernetes/TheIdServer-public-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: FreeTheIdServer-public
  namespace: FreeTheIdServer
spec:
  selector:
    matchLabels:
      app: FreeTheIdServer-public
  replicas: 2
  template:
    metadata:
      labels:
        app: FreeTheIdServer-public
        role: backend
    spec:
      containers:
      - image: aguacongas/FreeTheIdServer:next # update with the version you want to use
        name: FreeTheIdServer-public
        ports:
        - containerPort: 443
        - containerPort: 80
        volumeMounts:
        - name: certificates-volume
          mountPath: /usr/local/share/ca-certificates
        - name: config
          mountPath: /usr/local/share/config
        - name: keys-volume
          mountPath: /usr/local/share/keys
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /usr/local/share/config/admin-appsettings.Public.json /app/wwwroot/appsettings.json"]
      volumes:
      - name: certificates-volume
        persistentVolumeClaim:
          claimName: certificates
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: keys-volume
        persistentVolumeClaim:
          claimName: keys
