sample/Kubernetes/SqlServer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-server
  namespace: FreeTheIdServer
  labels:
    run: sql-server
spec:
  selector:
    app: sql-server
  ports:
    - protocol: TCP
      port: 1433
  type: LoadBalancer
