sample/Kubernetes/TheIdServer-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: FreeTheIdServer-public
  namespace: FreeTheIdServer
  labels:
    run: FreeTheIdServer-public
spec:
  selector:
    app: FreeTheIdServer-public
  ports:
    - name: https
      port: 443
    - name: http
      port: 80
  type: LoadBalancer
